# TaigaWM

./: '  .gitignore  Cargo.toml  DEV-README.md  README  README.md  TaigaWM.desktop  debug-wm.sh  format.sh  meson.build  nohup.out  river  shell.nix  taiga-dev-1.rockspec  taiga.lua  taigarc.lua  test-taiga.sh  typescript
include/: actions.h  allocators.h  autostart.h  config.h  input.h  layer_shell.h  libinput.h  output.h  pointer.h  seat.h  window.h  wm.h  xkb.h
include/protocol/: river-input-management-v1.lua  river-layer-shell-v1.lua  river-libinput-config-v1.lua  river-window-management-v1.lua  river-xkb-bindings-v1.lua  river-xkb-config-v1.lua  wlr-output-management-unstable-v1.lua
protocol/: river-input-management-v1.xml  river-layer-shell-v1.xml  river-libinput-config-v1.xml
src/: autostart.c  autostart.lua  config.c  config.lua  globals.lua  input.c  layer_shell.c  libinput.c  libinput.lua  main.c  main.rs  output.c  output.lua  pointer.c  seat.c  seat.lua  table_helpers.lua  taiga.lua  window.c  window.lua  wm.c  wm.lua  xkb.c
taiga/protocol/: river-window-management-v1.xml
