[package]
name = "taiga"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.12.1", features = ["serde"] }
image = "0.25.10"
river = "0.2.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_derive = "1.0.228"
wayland-backend = "0.3.15"
wayland-client = "0.31.14"
wayland-scanner = "0.31.10"
